A fix for CodeMirror hanging the CPU in the case where the editor is collapsed to zero height. (This can happen after using the "move to tab" function.)

--- a/src/themes/default-terminal/terminal-viewer.scss
+++ b/src/themes/default-terminal/terminal-viewer.scss
@@ -38,6 +38,7 @@
     color: $terminal-foreground-color;
     background-color: $terminal-background-color;
     outline: none;
+    min-height: 1em;  /* Prevent CodeMirror from freaking out and hanging the CPU if the height becomes 0. */
 }
 
 .terminal-focused SPAN.terminal-cursor {
